refactor: clean README and improve JSON parsing robustness
- Remove all emoji icons and ASCII pipeline diagram from README
- Remove ROADMAP section and footer
- Fix anchor links in Table of Contents
- Add robust JSON repair function for synthesis response parsing
- Handle missing commas, trailing commas, newlines in JSON
- Add fallback extraction for answer when JSON parsing fails
- Suppress transformers deprecation warnings during model loading
- Support both AutoModelForImageTextToText and AutoModelForVision2Seq
- Update .gitignore with additional patterns for Cursor, HuggingFace cache

--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,19 @@ _hf_space/
 # Trace results
 results/
 *.log
+
+# Cursor AI
+.cursor/
+
+# HuggingFace cache
+.huggingface/
+huggingface_hub/
+
+# Large files
+*.safetensors
+*.bin
+*.onnx
+
+# Notebooks outputs  
+notebooks/outputs/
+notebooks/*.html
