chore: remove archive, test_data, and legacy docs from tracking
- Delete archive/ directory (legacy apps, scripts, tests)
- Delete archive_docs/ directory (old documentation)
- Delete test_data/ directory (sample images)
- Update .gitignore to prevent future tracking
- Update README.md with cleaner documentation structure
- Add UI trace view feature to gradio_app.py

--- a/.gitignore
+++ b/.gitignore
@@ -92,3 +92,10 @@ huggingface_hub/
 # Notebooks outputs  
 notebooks/outputs/
 notebooks/*.html
+
+# Local archives / large scratch data (do not track)
+archive/
+archive_docs/
+archived_results/
+archived_results_2/
+test_data/
